get all recipes, swagger
