# controllers/coctail-controller/getById.js
@@ -3,9 +3,12 @@ import { Coctail } from "../../models/coctail.js";
 
 async function getById(req, res) {
     const { id } = req.params;
-    const result = await Coctail.findById(id);
+    const result = await Coctail.findById(
+			id,
+			"drink description category glass instructions drinkThumb ingredients",
+		);
     if (!result) {
-        throw HttpError(404, `Coctail with id=${id} not found`);
+        throw HttpError(400, `Coctail not found`);
     }
     res.json(result);
 };
