# swagger.json
@@ -111,6 +111,27 @@
 						"name": "limit",
 						"type": "number",
 						"description": "How many recipes return in current page. Default: 10"
+					},
+					{
+						"in": "query",
+						"required": false,
+						"name": "search",
+						"type": "string",
+						"description": "Search recipe by name"
+					},
+					{
+						"in": "query",
+						"required": false,
+						"name": "ingredient",
+						"type": "string",
+						"description": "Search recipe by ingredient"
+					},
+					{
+						"in": "query",
+						"required": false,
+						"name": "category",
+						"type": "string",
+						"description": "Search recipe by category"
 					}
 				],
 
@@ -125,15 +146,11 @@
 							}
 						}
 					},
-					"400": {
-						"description": "Bad request (invalid request body)",
-						"content": {}
-					},
 					"404": {
 						"description": "Not found",
 						"content": {}
 					},
-					"409": {
+					"500": {
 						"description": "Server error",
 						"content": {}
 					}
@@ -166,14 +183,14 @@
 						}
 					},
 					"400": {
-						"description": "Bad request (invalid request body)",
+						"description": "'Is not valid ID' or 'Coctail not found'",
 						"content": {}
 					},
 					"404": {
 						"description": "Not found",
 						"content": {}
 					},
-					"409": {
+					"500": {
 						"description": "Server error",
 						"content": {}
 					}
@@ -316,6 +333,11 @@
 							"type": "string",
 							"description": "Recipe's name",
 							"example": "Dragonfly"
+						},
+						"description": {
+							"type": "string",
+							"description": "Description of coctail",
+							"example": "The porn star martini is a passion-fruit-flavoured cocktail made with vanilla-flavoured vodka, Passoã, passion fruit juice, and lime juice. It is traditionally accompanied by a chilled shot glass of prosecco. "
 						},
 						"category": {
 							"type": "string",
